# cpu_offline_renderer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/basic/: CMakeLists.txt
src/basic/ray/: ray.cpp  ray.h
src/basic/util/: mathtool.h  rng.h
src/basic/vector/: point2.cpp  point2.h  point3.cpp  point3.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/raytracing/: CMakeLists.txt
src/raytracing/core/: camera.cpp  camera.h  color.cpp  color.h  image.cpp  image.h  integrator.h  interaction.h  light.h  material.cpp  material.h  primitive.cpp  primitive.h  renderer.h  sampler.h  scene.cpp  scene.h  shape.cpp  shape.h  transform.cpp  transform.h
src/raytracing/shapes/: sphere.cpp  sphere.h
